updated swagger patch payment source
